<resources>
    <string name="app_name">AutoMobile Unconscious Pay System</string>
    <string name="loginTabA">密码登录</string>
    <string name="loginTabB">验证码登录</string>
    <string name="loginalert">用户登录</string>
    <string name="signalert">用户注册</string>
    <string name="login">登录</string>
    <string name="signUp">注册</string>
    <string name="getSendCode">获取验证码</string>
    <string name="sendCode">验证码</string>
    <string name="passW">密码</string>
    <string name="passWR">确认密码</string>
    <string name="confirm">确定</string>
    <string name="idCard">身份证</string>
    <string name="name">姓名</string>
    <string name="carId">车牌号码</string>
    <string name="getSignUp">点击注册></string>
    <string name="phoneNum">手机号</string>
    <string name="phoneNum_off">未绑定手机号</string>
    <string name="bind">绑定</string>
    <string name="carBind">车辆绑定</string>
    <string name="carboard">车辆型号</string>
    <string name="manIdentify">身份认证</string>
    <string name="nameIdentify">实名认证</string>
    <string name="nameIdentify_off">未通过实名认证</string>
    <string name="carNum_off">未绑定车辆</string>
    <string name="proFile">个人资料</string>
    <string name="chargeWay">支付方式</string>
    <string name="weChat">微信</string>
    <string name="aliPay">支付宝</string>
    <string name="bankCard">银行卡</string>
    <string name="balance">当前余额</string>
    <string name="purse">钱包</string>
    <string name="deposit">充值</string>
    <string name="myCharge">我的零钱</string>
    <string name="payWay">支付方式</string>
    <string name="payWay_off">未绑定支付方式</string>
    <string name="plate_rect">车牌识别区</string>
</resources>
