<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oneUIColor"
    tools:context=".identityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginBlank1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/identifyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/manIdentify"
            android:textAlignment="center"
            android:textColor="@color/colorDisplayFont"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/loginBlank2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/identifyphoneEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/phoneNum"
                android:inputType="phone"
                android:padding="20dp"
                android:background="@drawable/shape_corner"
                android:selectAllOnFocus="true"
                android:singleLine="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank23"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/identifysendCodeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/sendCode"
                android:inputType="number"
                android:padding="20dp"
                android:background="@drawable/shape_corner"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <Button
                android:id="@+id/identifysendCodeGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/shape_corner_blue"
                android:text="@string/getSendCode"
                android:textColor="@color/colorCriterionFont"
                android:textSize="18sp"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank25"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/identifyIdEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/idCard"
                android:inputType="number"
                android:background="@drawable/shape_corner"
                android:padding="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank24"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/identifyNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:background="@drawable/shape_corner"
                android:padding="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>


        <TextView
            android:id="@+id/loginBlank26"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/identifyButton"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_corner_blue"
            android:text="@string/bind"
            android:textColor="@color/colorCriterionFont"
            android:textSize="18sp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>