<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oneUIColor"
    android:orientation="vertical"
    tools:context=".CarBindActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/carBlank1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/carBindBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/carBind"
            android:textAlignment="center"
            android:textColor="@color/colorDisplayFont"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/carBlank2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/carNumEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_corner"
                android:ems="10"
                android:hint="@string/carId"
                android:inputType="text"
                android:padding="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/carBlank4"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/carbandEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_corner"
                android:ems="10"
                android:hint="@string/carboard"
                android:inputType="text"
                android:padding="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank3"
            android:layout_width="match_parent"
            android:layout_height="50dp" />


        <Button
            android:id="@+id/carBind"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_corner_blue"
            android:text="@string/bind"
            android:textColor="@color/colorCriterionFont"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>