<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oneUIColor"
    tools:context=".phoneInputActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginBlank1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/SignUpboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/signalert"
            android:textAlignment="center"
            android:textColor="@color/colorDisplayFont"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/loginBlank2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phoneNum"
            android:padding="20dp"
            android:background="@drawable/shape_corner"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank3"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/getSendCode"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:text="@string/getSendCode"
            android:background="@drawable/shape_corner_blue"
            android:textSize="18sp"
            android:textColor="@color/colorCriterionFont"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>