<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/oneUIColor"
    android:layout_gravity="center"
    tools:context=".PurseActivity">

    <TextView
        android:id="@+id/loginBlank1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorDisplayFont"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Purseboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/purse"
        android:textAlignment="center"
        android:textColor="@color/colorDisplayFont"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/loginBlank11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorDisplayFont"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/myChargboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/myCharge"
        android:textAlignment="center"
        android:textColor="@color/colorDisplayFont"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/moneyIcon"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="0dp"
            android:fontFamily="cursive"
            android:text="￥"
            android:textAlignment="center"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/moneyNum"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="55.25"
            android:textAlignment="center"
            android:textColor="@color/colorDisplayFont"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/loginBlank41"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorDisplayFont"
        android:textSize="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/depositbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/shape_corner_blue"
            android:text="@string/deposit"
            android:textColor="@color/colorCriterionFont" />
    </LinearLayout>


</LinearLayout>