<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/oneUIColor"
    tools:context=".PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginBlank1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Passwordboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/passW"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/loginBlank2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorDisplayFont"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passWEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/passW"
                android:inputType="numberPassword"
                android:paddingBottom="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />


        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank3"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passWREdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/passWR"
                android:inputType="numberPassword"
                android:paddingBottom="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginBlank4"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_corner_blue"
            android:text="@string/signUp"
            android:textColor="@color/colorCriterionFont"
            android:textSize="18sp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>